# coder-plugin

./: .gitignore  Readme.md
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/agents/: environment-manager.md
hooks/: hooks.json
plugins/Coder/: Readme.md  the-longform-guide.md  the-shortform-guide.md
plugins/Coder/.claude-plugin/: plugin.json
plugins/Coder/agents/: architect.md  build-error-resolver.md  chief-of-staff.md  code-reviewer.md  database-reviewer.md  doc-updater.md  e2e-runner.md  go-build-resolver.md  go-reviewer.md  planner.md  python-reviewer.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
plugins/Coder/commands/: build-fix.md  claw.md  evolve.md  instinct-export.md  instinct-import.md  instinct-status.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  plan.md  refactor-clean.md  test-coverage.md  update-codemaps.md  update-docs.md
plugins/SampleTDDCoder/: Readme.md
plugins/ScaffoldX/skills/auth-module/assets/: pyproject.toml
plugins/ScaffoldX/skills/auth-module/assets/src/backend/server/: __main__.py  db.py
plugins/ScaffoldX/skills/auth-module/assets/src/backend/server/auth/: models.py
plugins/ScaffoldX/skills/auth-module/assets/src/frontend/: main.tsx
plugins/ScaffoldX/skills/auth-module/assets/src/frontend/user/: App.tsx  index.css
plugins/ScaffoldX/skills/auth-module/assets/src/frontend/user/api/: client.ts
schemas/: hooks.schema.json  package-manager.schema.json  plugin.schema.json
scripts/: stop.sh
skills/extraction-tool/: requirements.txt
(+175 files in other folders)
