[project]
name = "module-user-packages"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-tornasync>=0.6.0.post2",
    "toml>=0.10.2",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.0.0",
    "passlib[bcrypt]>=1.7.0",
    "sqlmodel>=0.0.32",
    "fastapi-users>=15.0.4",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "sqladmin>=0.23.0",
    "starlette==0.52.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pyyaml>=6.0.3",
]

[tool.setuptools.package-data]
module_user_packages = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
